# wise-pass-demo

./: Android.mk  CHANGELOG.md  EI-Connect.sln  EI-Connect_VS2015.sln  Makefile.am  README.md  VERSION  WISEPlatform.vcproj  WISEPlatform.vcxproj  WISEUtil.vcproj  WISEUtil.vcxproj  build-wiseagent.sh  configure.ac  pre-install_centos.sh  pre-install_ubuntu.sh  release-helper.sh  release.sh  subtree.bat  subtree.sh  subtree.txt  util_pipe.h  version.h  wisepaas_01_def.h  wisepaas_02_def.h
Debug/: BuildLog.htm  WISEPlatform.res  WISEUtil.res  mt.dep  vc90.idb
Debug/WISEPlatform.tlog/: CL.read.1.tlog  WISEPlatform.write.1u.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog
Debug/WISEUtil.tlog/: CL.command.1.tlog  CL.read.1.tlog  WISEUtil.lastbuildstate  WISEUtil.write.1u.tlog  link.command.1.tlog  link.write.1.tlog  rc.write.1.tlog
Include/: svnversion.h  wisepaas_01_def.h  wisepaas_02_def.h
Include/wise/: wisepaas_01_def.h  wisepaas_02_def.h  wisepaas_base_def.h
JNI/WISECoreJNI/: WISECoreJNI.c  WISECoreJNI.h  WISECoreJNI.java  WISECoreJNI.vcproj  WISECoreJNI.vcxproj  WISECoreJNI.vcxproj.filters
JNI/WISECoreJNI/Debug/: vc140.idb
Lib_EI/Include/: svnversion.h
Lib_EI/MQTTConnector/: Android.mk  MQTTConnector.c  MQTTConnector.rc  MQTTConnector.vcproj  MQTTConnector.vcxproj  MQTTConnector.vcxproj.filters  MQTTConnectorEx.c  Makefile.am  WISEConnector.h  WISEConnectorEx.h  version.h
Lib_EI/MosquittoCarrier/: Android.mk  ExternalTranslator.c  ExternalTranslator.h  Makefile.am  MosquittoCarrier.c  MosquittoCarrier.vcproj  MosquittoCarrier.vcxproj  MosquittoCarrier.vcxproj.filters  MosquittoCarrierEx.c  WiseCarrierEx_MQTT.h  WiseCarrier_MQTT.h  topic.c  version.h
Lib_EI/WISECore/: Android.mk  Makefile.am  WISECore.c  WISECore.h  WISECore.rc  WISECore.vcproj  WISECore.vcxproj  WISECore.vcxproj.filters  WISECoreEx.c  WISECoreEx.h  version.h
Library3rdParty/mosquitto-1.4.10/: config.h
Library3rdParty/mosquitto-1.4.10.win32/lib/: mosquitto.lib
Library3rdParty/mosquitto-1.4.10/lib/: mosquitto_internal.h  time_mosq.c  tls_mosq.c
Linux/: service.c  util_os.c  util_path.c  util_process.c
MQTTConnector/: Android.mk  MQTTConnector.c  MQTTConnector.vcproj  MQTTConnector.vcxproj  MQTTConnectorEx.c  Makefile.am  WISEConnector.h  WISEConnectorEx.h  version.h
MQTTConnector/Debug/: BuildLog.htm  MQTTConnector.res  vc90.idb
MosquittoCarrier/: Android.mk  ExternalTranslator.c  Makefile.am  MosquittoCarrier.c  MosquittoCarrier.vcproj  MosquittoCarrier.vcxproj  MosquittoCarrierEx.c  WiseCarrierEx_MQTT.h  WiseCarrier_MQTT.h
MosquittoCarrier/Debug/: BuildLog.htm  vc90.idb
Platform/: Android.mk  Makefile.am  NamedPipeClient.h  WISEPlatform.vcproj  WISEPlatform.vcxproj  WISEPlatform.vcxproj.filters  WISEUtil.vcproj  WISEUtil.vcxproj  WISEUtil.vcxproj.filters  basequeue.c  network.h  svnversion.h  util_libloader.h  util_path.h  util_process.h  util_string.h  version.h
Platform/Debug/: mt.dep  vc140.idb
Platform/Debug/WISEPlatform.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  rc.write.1.tlog
Platform/Debug/WISEUtil.tlog/: CL.write.1.tlog  link.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog
Platform/Linux/: NamedPipeClient.c  network.c  service.c  util_libloader.c  util_os.c  util_path.c  util_pipe.c  util_power.c  util_process.c  util_string.c
Platform/Windows/: network.c  pthread.h  stdint.h  util_os.c  util_path.c  util_pipe.c  util_process.c  wrapper.h
Platform/Windows/sys/: time.cpp
Sample/MosquittoSample/: Makefile.am  MosquittoSample.c  MosquittoSample.vcproj  MosquittoSample.vcxproj  MosquittoSample.vcxproj.filters
Sample/MosquittoSample/Debug/: BuildLog.htm  mt.dep  vc140.idb
Sample/MosquittoSample/Debug/MosquittoSample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Sample/WISECoreSample/: Android.mk  Makefile.am  WISECoreSample.c  WISECoreSample.vcproj  WISECoreSample.vcxproj  WISECoreSample.vcxproj.filters
Sample/WISECoreSample/Debug/: vc140.idb
Sample/WISECoreSample/Debug/WISECoreSample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WISECoreSample.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
WISECore/: WISECore.c  WISECore.h  WISECore.vcproj  WISECore.vcxproj  WISECoreEx.c  WISECoreEx.h
WISECore/Debug/: BuildLog.htm  WISECore.res  vc90.idb
Windows/: network.c  util_libloader.c  util_process.c  util_string.c
Windows/sys/: time.h
(+6 files in other folders)
