SUBDIRS = Library/Log \
	  Platform \
	  Library/MosquittoCarrier \
	  Library/MQTTConnector \
	  Library/WISECore \
	  Library/cJSON \
	  Library/DES \
	  Library/Base64 \
	  Library/SAClient \
	  Library/SAConfig \
	  Library/FtpHelper \
	  Library/MD5 \
	  Library/MessageGenerator \
	  Library/SAManager \
	  Library/SAGeneralHandler \
	  Library/SAHandlerLoader \
	  Library/ReadINI \
	  Library/HandlerKernel \
	  Sample/MosquittoSample \
	  Sample/SampleAgent \
	  Sample/HandlerSample \
	  Sample/ModbusSample \
	  Sample/WISECoreSample
	 
	  
ACLOCAL_AMFLAGS = -I m4
